examples/neg/TernaerOper-Neg5.iml
// syntax error 3 expr2
program ternaereOperatorNeg()
do
  debugout true ? 1 :
endprogram